--- a/.github/workflows/build-all-samples.yml
+++ b/.github/workflows/build-all-samples.yml
@@ -17,3 +17,4 @@ jobs:
         uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_API_TOKEN }} 
+          coverage-reports: build/reports/jacoco/report.xml
